--- a/i3/config
+++ b/i3/config
@@ -1,5 +1,5 @@
+# A. Thompson @ 2018
 # i3 config file (v4)
-# A. Thompson 2018
 # w/ gaps
 
 # i3start.sh (runs compton, polybar, & sets wallpaper)
@@ -10,28 +10,36 @@ exec --no-startup-id nm-applet
 exec --no-startup-id blueberry-tray
 
 # i3-gaps & and basic settings
-set $win Mod4 
-set $mod Mod1
-
+font pango:DejaVu Sans Mono 20
 for_window [class="^.*"] border pixel 2 
+
 gaps inner 15
 gaps outer 0
+
 smart_gaps enable
 smart_borders no_gaps
 workspace_auto_back_and_forth yes
-
-font pango:DejaVu Sans Mono 20
-
 floating_modifier $mod
-bindsym $mod+Return exec termite
+
+set $win Mod4 
+set $mod Mod1
+
+# gaps hotkeys
+bindsym $mod+Shift+i gaps inner current set 0
+bindsym $mod+Shift+o gaps inner current minus 2
+bindsym $mod+Shift+p gaps inner current plus 2
+
+bindsym $win+Shift+i gaps outer current set 0
+bindsym $win+Shift+p gaps outer current plus 2
+bindsym $win+Shift+o gaps outer current minus 2
 
 # kill focused window
 bindsym $mod+Shift+q kill
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id rofi -show run
-bindsym $win+Tab exec --no-startup-id rofi -show window
+bindsym $mod+Return exec termite
+bindsym $mod+d exec --no-startup-id rofi -show run -location 7 -dpi 180 -lines 10 -theme ~/.config/rofi-themes/official/Monokai.rasi
 
 # quick swap workspaces
 bindsym $mod+Ctrl+Tab workspace next
@@ -83,7 +91,7 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-# workspace alias - used if no longer using polybar
+# workspace alias - currently being defined in polybar/config
 set $WS1 
 set $WS2 
 set $WS3 
@@ -121,7 +129,7 @@ bindsym $mod+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Why you wanna leave?' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 bindsym $win+h resize shrink width 10 px or 10 ppt
@@ -144,12 +152,11 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #i
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
-# Touchpad toggle 
-bindsym F4 exec ~/scripts/touchpad-toggle.sh 
-
 # Media player controls
 bindsym XF86AudioPlay exec playerctl play
 bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
+# Touchpad toggle 
+bindsym F4 exec ~/scripts/touchpad-toggle.sh 
