--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,40 @@
 
 Exodus Eden/
-	Franz/
-	LBRY/
-	Qtwebflix/
-	Slack/
-	Trolltech.conf
-	animals-in-space.jpg
-	autostart/
-	configstore/
-	dconf/
-	enchant/
-	gconf/
-	gedit/
-	gnome-control-center/
-	google-chrome-unstable/
-	gthumb/
-	gtk-3.0/
-	hexchat/
-	htop/
-	manjaro-hello.json
-	manjaro/
-	menus/
-	mimeapps.list
-	monitors.xml
-	neofetch/
-	pulse/
-	pulseaudio-ctl/
-	qt5ct/
-	qupzilla/
-	qutebrowser/
-	spotify/
-	sway/
-	systemdgenierc
-	termite/base16-termite/
-	user-dirs.dirs
-	user-dirs.locale
-	yad.conf
-	youtube-dl.conf
-	zoomus.conf 
+Franz/
+LBRY/
+Qtwebflix/
+Slack/
+Trolltech.conf
+animals-in-space.jpg
+autostart/
+configstore/
+dconf/
+enchant/
+gconf/
+gedit/
+gnome-control-center/
+google-chrome-unstable/
+gthumb/
+gtk-3.0/
+hexchat/
+htop/
+manjaro-hello.json
+manjaro/
+menus/
+mimeapps.list
+monitors.xml
+neofetch/
+pulse/
+pulseaudio-ctl/
+qt5ct/
+qupzilla/
+qutebrowser/
+spotify/
+way/
+systemdgenierc
+termite/base16-termite/
+user-dirs.dirs
+user-dirs.locale
+yad.conf
+youtube-dl.conf
+zoomus.conf 
